Fix overflowing fields

--- a/graphics/css/commentary.css
+++ b/graphics/css/commentary.css
@@ -44,6 +44,7 @@
     line-height: 50px;
     text-align: center;
     padding-top: 20px;
+    overflow: hidden;
 }
 
 .commentator-social {
@@ -52,4 +53,5 @@
     font-size: 21pt;
     text-align: center;
     color: rgb(160, 160, 160);
+    overflow: hidden;
 }
